@@ -84,3 +84,4 @@
 * Added SqlAdapter#create_connection and SqlAdapter#close_connection abstract methods
 * Added MysqlAdapter#create_connection and MysqlAdapter#close_connection concrete methods
 * Made SqlAdapter#connection a concrete method (instead of abstract), with support for single_threaded operation
+* Database#setup now takes a Hash of options instead of a block-initializer
